--- a/css/jabo.css
+++ b/css/jabo.css
@@ -1,9 +1,20 @@
+body {
+    overflow-x: hidden;
+}
+
+.wrap {
+
+    font-family: 'GmarketSansMedium';
+}
+
 .header {
     position: relative;
     z-index: 21;
     border-bottom: 1px solid #dadada;
     background-color: #fff;
 }
+
+
 
 .logo {
     margin: 0 auto;
@@ -12,54 +23,373 @@
     padding: 20px 0;
 }
 
-.logo img {
-    max-width: 50%;
+
+.header .inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+
+
 }
 
-.gnb_area {
-    width: 100%;
-    max-width: 1200px;
-    position: relative;
-    margin: auto;
-    z-index: 999;
-}
-
-.gnb_area .gnb {
-    position: relative;
-}
-
-.gnb .gnb_menu {
+.gnb .gnb_menu img {
     position: static;
 
-    padding: 1rem;
+    padding: 0.5rem;
 
     background-color: #ed2623;
 
 
 }
 
-.gnb_area .gnb ul {
+.gnb>li>a {}
+
+
+.header .gnb>ul {
     display: flex;
-    gap: 4rem;
-    justify-content: center;
-    align-items: center;
+
+
     padding: 1rem;
+
+
+
 }
 
-.gnb_area .gnb ul>li>a {
+.header .gnb>ul>li {
+    position: relative;
+    line-height: 70px;
+}
+
+
+
+
+.header .gnb>ul>li>a {
+
+
+    white-space: nowrap;
     display: block;
+    padding: 0 4rem 0 4rem;
     font-weight: 700;
     font-size: 1.07rem;
+
+
+
 }
 
+/* 
+.header .gnb>ul>li:hover {
+    background: #ed2623;
+    color: #fff;
+} */
+
+
+
+
+
+.header .gnb>ul>li .sub {
+    display: none;
+    width: 100%;
+    background-color: #fff;
+    transition: all .2s;
+    position: absolute;
+    left: 0px;
+    top: 10px;
+    background-color: #fff;
+}
+
+.header .gnb>ul>li:hover .sub {
+
+    display: block;
+    top: 70px;
+
+}
+
+.header .gnb>ul>li .sub a {
+    display: block;
+    text-align: center;
+    color: #474747;
+    font-size: 15px;
+    line-height: 30px;
+}
+
+
+
+.mobile_btn {
+    display: none;
+}
+
+
+/*반응형 메뉴*/
+
+@media (max-width : 768px) {
+    body {
+        overflow-x: hidden;
+
+    }
+
+    .wrap {
+        overflow: hidden;
+        font-family: 'GmarketSansMedium';
+    }
+
+
+    .header {
+        position: relative;
+        z-index: 21;
+        border-bottom: 1px solid #dadada;
+        background-color: #fff;
+        /*r*/
+        border: none;
+    }
+
+
+
+    .logo {
+        margin: 0 auto;
+        text-align: center;
+        border-bottom: solid 1px #dadada;
+        padding: 20px 0;
+
+        /*r*/
+        border: none;
+    }
+
+    .header h1 {
+        /* r */
+        position: absolute;
+        z-index: 10;
+        padding-right: 200px;
+    }
+
+
+    .header .inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 70px;
+
+
+    }
+
+    .header .gnb {
+        /* r */
+
+        position: fixed;
+        inset: 0 auto 0 100%;
+        background: #444;
+        width: 100%;
+
+
+        transition: 0.5s;
+    }
+
+    .header .gnb.on {
+        /* r */
+        inset: 0 auto 0 0;
+    }
+
+
+
+
+
+    .gnb .gnb_menu img {
+        position: static;
+
+        padding: 0.5rem;
+
+        background-color: #ed2623;
+        /*r*/
+        display: none;
+
+    }
+
+    .gnb>li>a {}
+
+
+    .header .gnb>ul {
+        display: flex;
+
+        padding: 1rem;
+
+        /* r */
+        flex-direction: column;
+        gap: 0;
+        padding: 150px 30px 0 30px;
+
+
+    }
+
+    .header .gnb>ul>li {
+        position: relative;
+        line-height: 70px;
+
+        color: #fff;
+    }
+
+
+
+
+    .header .gnb>ul>li>a {
+
+
+        white-space: nowrap;
+        display: block;
+        padding: 0 4rem 0 4rem;
+        font-weight: 700;
+        font-size: 1.07rem;
+
+        /* r */
+
+        border-bottom: 1px solid #666;
+        padding-left: 1rem;
+
+    }
+
+    /* 
+    .header .gnb>ul>li:hover {
+        background: #ed2623;
+        color: #fff;
+    } */
+
+
+    .header .gnb>ul>li {
+
+        /* r */
+        line-height: 40px;
+    }
+
+
+
+    .header .gnb>ul>li .sub {
+        display: none;
+        width: 100%;
+        background-color: #fff;
+        transition: all .2s;
+        position: absolute;
+        left: 0px;
+        top: 10px;
+        background-color: #fff;
+
+        /* r */
+        position: static;
+        background: rgba(0, 0, 0, 1);
+        padding: 0 0 0 0;
+    }
+
+    .header .gnb>ul>li:hover .sub {
+
+        display: block;
+        top: 70px;
+
+
+        display: none;
+    }
+
+    .header .gnb>ul>li .sub a {
+        display: block;
+        text-align: center;
+        color: #474747;
+        font-size: 15px;
+        line-height: 30px;
+
+        text-align: start;
+        padding: 1px 0 1px 1rem;
+    }
+
+
+
+    .mobile_btn {
+        /* r */
+
+
+        display: block;
+
+        position: fixed;
+
+        inset: 30px 30px auto auto;
+        z-index: 999;
+        width: 30px;
+        height: 30px;
+        background: #ddd;
+        border-radius: 5px;
+    }
+
+    .mobile_btn::before,
+    .mobile_btn::after {
+        content: "";
+        position: absolute;
+        inset: 14px 5px auto 5px;
+        height: 2px;
+        background: #444;
+
+
+    }
+
+    .mobile_btn.on::before {
+        transform: rotate(45deg);
+        transition: 0.5s 0.2s;
+    }
+
+    .mobile_btn.on::after {
+        transform: rotate(-225deg);
+        transition: 0.5s 0.6s;
+    }
+
+
+    .mobile_btn button {
+        border: none;
+        outline: none;
+        background: transparent;
+    }
+
+    .mobile_btn button::before,
+    .mobile_btn button::after {
+        content: "";
+        position: absolute;
+        height: 2px;
+        background: #444;
+    }
+
+    .mobile_btn button::before {
+        inset: 7px 5px auto 5px;
+    }
+
+    .mobile_btn button::after {
+        inset: auto 5px 7px 5px;
+    }
+
+    .mobile_btn.on button::before {
+        display: none;
+    }
+
+    .mobile_btn.on button::after {
+        display: none;
+    }
+
+}
+
+
+
+
 /**/
+
+
+
+
+.main_visual .visual_txt {
+    display: none;
+    width: 100%;
+    padding: 15px;
+    line-height: 1.4;
+}
 
 
 
 .visual_wrap {
     position: relative;
     z-index: 10;
-    top: -58px;
+    top: -70px;
     width: 100%;
     text-align: center;
     padding-bottom: 6%;
@@ -84,13 +414,6 @@
     background-color: rgba(242, 242, 242, .1);
 }
 
-/*반응형 메뉴*/
-.main_visual .visual_txt {
-    display: none;
-    width: 100%;
-    padding: 15px;
-    line-height: 1.4;
-}
 
 /* youtube width */
 .visual_wrap .visual {
@@ -108,6 +431,63 @@
     height: 100%;
 }
 
+
+/* 비디오 반응형*/
+
+@media (max-width : 768px) {
+
+
+
+    .visual_wrap {
+        position: relative;
+
+        top: 60px;
+
+        width: 100%;
+        height: 200px;
+        text-align: center;
+        padding-bottom: 6%;
+    }
+
+    .visual_wrap .visual {
+        width: 100%;
+        max-width: 1920px;
+        height: 100%;
+    }
+
+    .visual_wrap .visual .cover {
+        z-index: 20;
+        display: block;
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        display: none;
+
+    }
+
+
+    /* youtube width */
+    .visual_wrap .visual {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+    }
+
+    .visual_wrap .visual iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+
+}
 
 /*브랜드소개    */
 
@@ -143,14 +523,22 @@
     margin-bottom: 2rem;
 }
 
+
 .brand_txt>.txt_red .line {
-    overflow: hidden;
+
     height: 10px;
     margin-top: 5px;
-    border-bottom: solid 1px #ed2623;
+
 }
 
-
+.brand_txt>.txt_red .line::before {
+    content: "";
+    position: absolute;
+    border-bottom: 1px solid #ed2623;
+    top: -15px;
+    width: 474px;
+    height: 100px;
+}
 
 
 .brand {
@@ -158,7 +546,7 @@
     z-index: 20;
     top: -96px;
     padding: 80px 0 0;
-    background-color: #fff;
+
     padding-bottom: 6rem;
 }
 
@@ -210,6 +598,128 @@
     width: 48%;
 }
 
+/*brand 반응형*/
+
+@media (max-width : 768px) {
+
+    .brand_txt h2 {
+        font-size: 1.8rem;
+        font-weight: 800;
+        letter-spacing: -.5px;
+        text-align: left;
+        margin-bottom: 1rem;
+    }
+
+    .brand_txt>div {
+        margin-top: 15px;
+    }
+
+    .txt_red {}
+
+    .txt_red p {
+        float: left;
+        font-size: 1rem;
+        font-weight: 700;
+        margin-right: 20px;
+        letter-spacing: -.7px;
+
+    }
+
+    .txt_red {
+        margin-bottom: 2rem;
+    }
+
+
+    .brand_txt>.txt_red .line {
+
+        height: 10px;
+        margin-top: 5px;
+
+    }
+
+    .brand_txt>.txt_red .line::before {
+        content: "";
+        position: absolute;
+        border-bottom: 1px solid #ed2623;
+        top: -15px;
+        width: 474px;
+        height: 100px;
+    }
+
+
+    .brand {
+        position: relative;
+        z-index: 20;
+        top: -96px;
+        padding: 80px 0 0;
+
+        padding-bottom: 30rem;
+    }
+
+    .brand .inner {
+        position: relative;
+    }
+
+
+    .brand .brand_txt {
+        margin: 40px 0;
+    }
+
+
+    .brand .brand_txt {
+        position: absolute;
+        left: 4%;
+        top: 125%;
+        float: right;
+        width: 53%;
+        transform: translateY(-50%);
+        /*r*/
+        float: none;
+        width: 90%;
+    }
+
+
+    .brand .brand_txt .txt_content p {
+        color: #929292;
+        line-height: 1.4;
+        font-size: 11;
+        margin-bottom: 30px;
+        text-align: left;
+
+
+    }
+
+
+
+    .brand .brand_img img {
+        /*r*/
+        position: relative;
+        width: 50%;
+        top: 450px;
+
+
+    }
+
+
+    .brand .brand_img img,
+    .brand .brand_underimg img {
+        box-shadow: 12px 12px 0 rgba(241, 227, 227, .3);
+    }
+
+    .brand .brand_underimg {
+
+        position: absolute;
+        z-index: 1;
+        right: 30px;
+        bottom: -600px;
+        opacity: 1;
+        width: 58%;
+    }
+
+
+}
+
+
 /*메인슬라*/
 
 
@@ -249,8 +759,21 @@
     overflow: hidden;
     height: 10px;
     margin-top: 5px;
-    border-bottom: solid 1px #fff;
+
 }
+
+
+
+
+.slide_tit>.txt_white .line::before {
+    content: "";
+    position: absolute;
+    border-bottom: 1px solid #fff;
+    top: 90px;
+    width: 950px;
+    height: 100px;
+}
+
 
 
 
@@ -295,6 +818,7 @@
     left: 10px;
     line-height: 1.5;
     font-size: 1.34rem;
+
     word-break: keep-all;
 }
 
@@ -363,13 +887,22 @@
 /*창업안내*/
 
 .shop_open {
-
+    position: relative;
     width: 100%;
     padding: 110px 0 100px;
     background: url(../images/intro_bg.jpg) center center;
+    filter: invert(10%);
     background-size: cover;
 
 }
+
+
+
+
+.shop_open li img {
+    margin-bottom: 20px;
+}
+
 
 .shop_open .shop_tit {
     margin-bottom: 65px;
@@ -392,14 +925,27 @@
     margin-right: 20px;
     letter-spacing: -.7px;
     color: #fff;
+
 }
 
 .shop_open .shop_tit>.txt_white .line {
     overflow: hidden;
     height: 10px;
     margin-top: 5px;
-    border-bottom: solid 1px #fff;
+
 }
+
+
+.shop_open .shop_tit>.txt_white .line::before {
+    content: "";
+    position: absolute;
+    border-bottom: 1px solid red;
+    top: 78px;
+    width: 995px;
+    height: 100px;
+}
+
+
 
 .shop_open .icon_box {
     background-color: rgba(255, 255, 255, .85);
@@ -410,7 +956,7 @@
 .shop_open .icon_box li {
 
     display: inline-block;
-    width: 33%;
+    width: 32.9%;
     height: 194px;
 
     padding: 0 10px;
