--- a/css/jabo.css
+++ b/css/jabo.css
@@ -23,6 +23,10 @@ body {
     padding: 20px 0;
 }
 
+.mob_logo img {
+    display: none;
+}
+
 
 .header .inner {
     display: flex;
@@ -155,6 +159,16 @@ body {
         border: none;
         display: none;
     }
+
+
+    .mob_logo img {
+        position: absolute;
+        top: 3%;
+        left: 3%;
+
+        display: block;
+    }
+
 
     .header h1 {
         /* r */
@@ -954,7 +968,7 @@ body {
 
     .main_slide .slide_box {
         position: relative;
-        width: 270px;
+        max-width: 270px;
         min-height: 280px;
         height: 356px;
         background-color: #fff;
@@ -1052,6 +1066,25 @@ body {
     }
 
 
+
+}
+
+@media (max-width : 468px) {
+
+
+    .main_slide .slide_box {
+        position: relative;
+        max-width: 410px;
+        min-height: 280px;
+        height: 356px;
+        background-color: #fff;
+        vertical-align: middle;
+
+
+
+
+
+    }
 
 }
 
@@ -1219,17 +1252,28 @@ body {
     .shop_open .icon_box {
         background-color: rgba(255, 255, 255, .85);
         padding: 3%;
+
+        margin: 0 auto;
     }
 
+
+    .icon_box .clear {
+        /*r*/
+
+    }
 
     .shop_open .icon_box li {
 
 
         height: 194px;
         position: relative;
-        left: 7px;
+
+
+        left: 10px;
         display: inline-table;
-        width: 110px;
+
+        max-width: 105px;
+
 
     }
 
@@ -1251,6 +1295,37 @@ body {
         word-break: keep-all;
     }
 
+}
+
+@media (max-width : 380px) {
+
+    .shop_open .icon_box {
+        background-color: rgba(255, 255, 255, .85);
+        padding: 3%;
+
+        margin: 0 auto;
+    }
+
+
+    .icon_box .clear {
+        /*r*/
+
+    }
+
+    .shop_open .icon_box li {
+
+
+        height: 194px;
+        position: relative;
+
+
+        left: 10px;
+        display: inline-table;
+
+        max-width: 90px;
+
+
+    }
 }
 
 
@@ -1301,52 +1376,18 @@ body {
 
 }
 
-.form_wrap .name_wrap {
-    position: absolute;
-    display: flex;
-    right: 50%;
+.field_label {
+
+    padding-bottom: 10px;
+
 }
 
-.form_wrap .name_move {
-    margin: 10px;
+.field_input {
+    padding-bottom: 10px;
 }
 
-.form_wrap .name_input {
-    margin-left: 0px;
-}
-
-.form_wrap .phone_wrap {
-    position: absolute;
-    display: flex;
-
-    right: 33.3%;
-}
-
-.form_wrap .phone_move {
-    margin: 10px;
-}
-
-
-.form_wrap .phone_input {
-    margin: px;
-}
-
-.form_wrap .textarea_wrap {
-    position: absolute;
-    display: flex;
-    left: 670px;
-    bottom: -100px;
-}
-
-.form_wrap .textarea_move {
-    margin: 10px;
-}
-
-.form_wrap .form_agree_wrap {
-    position: absolute;
-    bottom: -50px;
-    right: 35.9%;
-    font-size: 0.7rem;
+.textarea_wrap {
+    padding-bottom: 10px;
 }
 
 .cliam {
@@ -1356,7 +1397,8 @@ body {
 .cliam .btn {
     position: absolute;
     top: 85%;
-    left: 62.2%;
+    left: 48%;
+    transform: translate(0, -50%);
 }
 
 .cliam .btn a {
@@ -1373,6 +1415,104 @@ body {
 
 .phone_wrap .phone_input {}
 
+/*반응형*/
+
+@media (max-width : 768px) {
+    .cliam {
+        width: 100%;
+        padding: 80px 0;
+        font-size: 1.07rem;
+        background-color: #ed2623;
+        color: #fff;
+    }
+
+
+    .cliam .cliam_tit {
+        text-align: center;
+        line-height: 1.1;
+        margin-bottom: 45px;
+
+    }
+
+    .cliam .cliam_tit h2 {
+        font-size: 2.34rem;
+        font-weight: 800;
+        margin-bottom: 1rem;
+        word-break: keep-all;
+    }
+
+    .cliam .cliam_tit .hr {
+        background-color: #fff;
+        width: 40px;
+        height: 1px;
+        margin: 20px auto;
+    }
+
+    .cliam .cliam_tit p {
+
+
+        font-size: 1rem;
+        padding-bottom: 1rem;
+
+
+        font-size: 0.8rem;
+    }
+
+
+    /*form 만들기*/
+
+    .form_wrap {
+        position: relative;
+        font-size: .8rem
+    }
+
+    .field_label {
+
+        padding-bottom: 5px;
+
+    }
+
+    .field_input {
+        padding-bottom: 10px;
+    }
+
+    .textarea_wrap {
+        padding-bottom: 10px;
+    }
+
+    .form_agree_wrap {
+        font-size: 0.8rem;
+    }
+
+    .cliam {
+        position: relative;
+    }
+
+    .cliam .btn {
+        position: absolute;
+
+        top: 85%;
+        left: 45%;
+        transform: translate(0, -50%);
+
+
+        position: relative;
+        left: 40%;
+    }
+
+    .cliam .btn a {
+
+        width: 100%;
+        box-sizing: border-box;
+        height: 60px;
+        font-size: 1.07rem;
+        background-color: #393939;
+        border-radius: 0;
+        padding: 10px;
+    }
+}
+
+
 /*footer*/
 
 .footer {
@@ -1384,4 +1524,20 @@ body {
     text-align: center;
     font-size: .8rem;
     color: #b6b6b6;
+}
+
+@media (max-width : 768px) {
+    .footer {
+        width: 100%;
+        padding: 30px 0;
+        border-top: 1px solid #efedee;
+        line-height: 1.4;
+        background-color: #fff;
+        text-align: center;
+        font-size: .8rem;
+        color: #b6b6b6;
+
+
+    }
+
 }
