--- a/css/jabo.css
+++ b/css/jabo.css
@@ -157,14 +157,15 @@ body {
 
         /*r*/
         border: none;
-        display: none;
+
+
     }
 
 
     .mob_logo img {
         position: absolute;
-        top: 3%;
-        left: 3%;
+        top: 5%;
+        left: 4%;
 
         display: block;
     }
@@ -173,8 +174,14 @@ body {
     .header h1 {
         /* r */
         position: absolute;
-        z-index: 10;
-        padding-right: 200px;
+
+
+
+    }
+
+    .header h1 img {
+        width: 50%;
+
     }
 
 
@@ -192,7 +199,7 @@ body {
 
         position: fixed;
         inset: 0 auto 0 100%;
-        background: #444;
+        background: #333;
         width: 100%;
 
 
@@ -230,7 +237,7 @@ body {
         /* r */
         flex-direction: column;
         gap: 0;
-        padding: 150px 30px 0 30px;
+        padding: 100px 0px 0 0px;
 
 
     }
@@ -289,7 +296,7 @@ body {
         /* r */
         position: static;
         transition: none;
-        background: rgba(0, 0, 0, 1);
+        background: #666;
         padding: 0 0 0 0;
     }
 
@@ -313,6 +320,62 @@ body {
         padding: 1px 0 1px 1rem;
     }
 
+
+    .header .main_menu .sub_btn {
+
+        position: relative;
+        top: -28px;
+        bottom: 0;
+        left: 100%;
+        width: 50px;
+
+    }
+
+
+    .header .main_menu .sub_btn>span {
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        display: block;
+        top: 50%;
+        left: 50%;
+
+    }
+
+    .header .main_menu .sub_btn>span::after,
+    .header .main_menu .sub_btn>span::before {
+        content: '';
+        position: absolute;
+        background-color: #fff;
+        transition: transform 0.25s ease-out;
+    }
+
+    .header .main_menu .sub_btn>span::before {
+        top: 0;
+        left: 50%;
+        width: 2px;
+        height: 100%;
+        margin-left: -1px;
+    }
+
+    .header .main_menu .sub_btn>span::after {
+        top: 50%;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        margin-top: -1px;
+    }
+
+
+    .header .main_menu .sub_btn.on>span::before {
+        transform: rotate(90deg);
+
+    }
+
+    .header .main_menu .sub_btn.on>span::after {
+        transform: rotate(180deg);
+
+    }
 
 
     .mobile_btn {
@@ -984,10 +1047,10 @@ body {
 
         position: absolute;
         top: 50%;
-        left: 40%;
+        left: 50%;
 
         transform: translate(-50%, -50%);
-        width: 250px;
+        width: 100%;
 
 
 
@@ -1069,14 +1132,30 @@ body {
 
 }
 
+
+
 @media (max-width : 468px) {
 
 
+    .slide_wrap .main_slide .itm {
+
+        min-width: 150px;
+    }
+
+    .slide_wrap .main_slide .itm p {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        min-height: auto;
+        height: 100%;
+    }
+
     .main_slide .slide_box {
         position: relative;
-        max-width: 410px;
-        min-height: 280px;
-        height: 356px;
+        max-width: 170px;
+        min-height: 260px;
+        height: 36px;
         background-color: #fff;
         vertical-align: middle;
 
@@ -1086,7 +1165,23 @@ body {
 
     }
 
+    .main_slide .itm img {
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+        width: 100%;
+
+
+
+    }
+
 }
+
+
+
 
 /*창업안내*/
 
@@ -1312,6 +1407,8 @@ body {
 
     }
 
+
+
     .shop_open .icon_box li {
 
 
@@ -1323,6 +1420,40 @@ body {
         display: inline-table;
 
         max-width: 90px;
+
+
+    }
+}
+
+
+
+@media (max-width : 320px) {
+
+    .shop_open .icon_box {
+        background-color: rgba(255, 255, 255, .85);
+        padding: 3%;
+
+        margin: 0 auto;
+    }
+
+
+    .icon_box .clear {
+        /*r*/
+
+    }
+
+
+
+    .shop_open .icon_box li {
+
+
+        height: 194px;
+        position: relative;
+
+
+        left: 35px;
+        display: inline-table;
+
 
 
     }
@@ -1365,7 +1496,7 @@ body {
 
 
     font-size: 1rem;
-    padding-bottom: 3rem;
+    padding-bottom: 1.5rem;
 }
 
 
@@ -1412,6 +1543,9 @@ body {
     padding: 10px;
 }
 
+.form_agree_wrap {
+    padding-top: 10px;
+}
 
 .phone_wrap .phone_input {}
 
