--- a/css/jabo.css
+++ b/css/jabo.css
@@ -726,7 +726,7 @@ body {
         content: "";
         position: absolute;
         border-bottom: 1px solid #ed2623;
-        top: -45px;
+        top: -60px;
         width: 604px;
         height: 100px;
     }
@@ -825,7 +825,7 @@ body {
     position: relative;
     width: 100%;
     padding: 120px 0 100px;
-    background: url('../images/gallery_bg.jpg') center center;
+    background: url('../images/gallery_bg.jpg') no-repeat center center;
     background-size: cover;
 }
 
@@ -1017,6 +1017,8 @@ body {
         top: 75px;
         width: 950px;
         height: 100px;
+
+        top: 60px;
     }
 
 
@@ -1196,7 +1198,7 @@ body {
     width: 100%;
     padding: 110px 0 100px;
     background: url(../images/intro_bg.jpg) center center;
-    filter: invert(10%);
+    filter: invert(20%) saturate(145%);
     background-size: cover;
 
 }
@@ -1206,10 +1208,12 @@ body {
 
 .shop_open li img {
     margin-bottom: 20px;
+
 }
 
 
 .shop_open .shop_tit {
+
     margin-bottom: 65px;
 }
 
@@ -1346,6 +1350,9 @@ body {
         top: 65px;
         width: 995px;
         height: 100px;
+
+        top: 50px;
+
     }
 
 
@@ -1373,9 +1380,10 @@ body {
         left: 10px;
         display: inline-table;
 
-        max-width: 105px;
+        width: 32%;
 
-
+        right: 1%;
+        left: 1%;
     }
 
 
@@ -1398,72 +1406,7 @@ body {
 
 }
 
-@media (max-width : 380px) {
 
-    .shop_open .icon_box {
-        background-color: rgba(255, 255, 255, .85);
-        padding: 3%;
-
-        margin: 0 auto;
-    }
-
-
-    .icon_box .clear {
-        /*r*/
-
-    }
-
-
-
-    .shop_open .icon_box li {
-
-
-        height: 194px;
-        position: relative;
-
-
-        left: 10px;
-        display: inline-table;
-
-        max-width: 90px;
-
-
-    }
-}
-
-
-
-@media (max-width : 320px) {
-
-    .shop_open .icon_box {
-        background-color: rgba(255, 255, 255, .85);
-        padding: 3%;
-
-        margin: 0 auto;
-    }
-
-
-    .icon_box .clear {
-        /*r*/
-
-    }
-
-
-
-    .shop_open .icon_box li {
-
-
-        height: 194px;
-        position: relative;
-
-
-        left: 35px;
-        display: inline-table;
-
-
-
-    }
-}
 
 
 /* 문의박스*/
